fixing visualization visibiltiy

--- a/output.css
+++ b/output.css
@@ -7,8 +7,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-50: oklch(97.1% 0.013 17.38);
-    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-amber-900: oklch(41.4% 0.112 45.904);
     --color-green-500: oklch(72.3% 0.219 149.579);
@@ -16,6 +14,7 @@
     --spacing: 0.25rem;
     --font-weight-light: 300;
     --font-weight-medium: 500;
+    --radius-sm: 0.25rem;
     --radius-xl: 0.75rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
@@ -233,9 +232,6 @@
       max-width: 96rem;
     }
   }
-  .my-2 {
-    margin-block: calc(var(--spacing) * 2);
-  }
   .my-12 {
     margin-block: calc(var(--spacing) * 12);
   }
@@ -275,9 +271,6 @@
   .h-24 {
     height: calc(var(--spacing) * 24);
   }
-  .h-144 {
-    height: calc(var(--spacing) * 144);
-  }
   .h-fit {
     height: fit-content;
   }
@@ -301,9 +294,6 @@
   }
   .w-24 {
     width: calc(var(--spacing) * 24);
-  }
-  .w-96 {
-    width: calc(var(--spacing) * 96);
   }
   .w-fit {
     width: fit-content;
@@ -398,6 +388,9 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
+  .rounded-sm {
+    border-radius: var(--radius-sm);
+  }
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
@@ -413,24 +406,11 @@
     border-style: var(--tw-border-style);
     border-width: 3px;
   }
-  .border-4 {
-    border-style: var(--tw-border-style);
-    border-width: 4px;
-  }
-  .border-black {
-    border-color: var(--color-black);
-  }
   .border-cta-primary {
     border-color: var(--color-cta-primary);
   }
   .border-grey {
     border-color: var(--color-grey);
-  }
-  .bg-amber-400 {
-    background-color: var(--color-amber-400);
-  }
-  .bg-amber-900 {
-    background-color: var(--color-amber-900);
   }
   .bg-background {
     background-color: var(--color-background);
@@ -438,23 +418,20 @@
   .bg-cta-primary {
     background-color: var(--color-cta-primary);
   }
-  .bg-green-500 {
-    background-color: var(--color-green-500);
-  }
   .bg-grey {
     background-color: var(--color-grey);
   }
-  .bg-\[url\(\'\/img\/hero\.jpg\'\)\] {
-    background-image: url('/img/hero.jpg');
+  .object-contain {
+    object-fit: contain;
   }
   .object-cover {
     object-fit: cover;
   }
+  .object-fill {
+    object-fit: fill;
+  }
   .p-1 {
     padding: calc(var(--spacing) * 1);
-  }
-  .p-2 {
-    padding: calc(var(--spacing) * 2);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -465,20 +442,11 @@
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
   }
-  .pt-12 {
-    padding-top: calc(var(--spacing) * 12);
-  }
   .pr-0 {
     padding-right: calc(var(--spacing) * 0);
   }
-  .pr-4 {
-    padding-right: calc(var(--spacing) * 4);
-  }
   .pr-12 {
     padding-right: calc(var(--spacing) * 12);
-  }
-  .pr-14 {
-    padding-right: calc(var(--spacing) * 14);
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
@@ -488,17 +456,6 @@
   }
   .text-center {
     text-align: center;
-  }
-  .desktop-body-1 {
-    font-size: 24px;
-    line-height: 28px;
-    font-weight: 300;
-    font-style: normal;
-    letter-spacing: 0em;
-  }
-  .mobile-body-1 {
-  .text-left {
-    text-align: left;
   }
   .desktop-body-2 {
     font-size: 20px;
@@ -583,10 +540,6 @@
   .opacity-0 {
     opacity: 0%;
   }
-  .shadow-2xl {
-    --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-sm {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -594,6 +547,10 @@
   .ring {
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
@@ -913,6 +870,11 @@ body:has(#viz-map:hover) .custom-cursor {
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -998,6 +960,7 @@ body:has(#viz-map:hover) .custom-cursor {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
